k8s/todo-app-backend-deployment.yaml
---
# Todo App Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-backend
  namespace: todo-app
  labels:
    app: todo-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    spec:
      containers:
      - name: todo-app-backend
        image: todo-app-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http
---
# Todo App Backend Service
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend
  namespace: todo-app
spec:
  type: NodePort
  selector:
    app: todo-app-backend
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 31850
